Actualice PDF document last changes

--- a/main.tex
+++ b/main.tex
@@ -128,7 +128,11 @@ Chatbots are the result of an evolution of more than 30 years. The first convers
 
 
 Chatbots are positioned as main players of innovation. Using chatbots has become an option that more and more companies are using to provide an additional service to their customers. In the past few months, a hype about this topic has been developed and according to Credence Research, chatbots are going to be a key piece of automation for 2019 and Gartner estimates that more than 85\% of the service centers client, will be operated by bots in 2020.
-\section{\label{sec:level1}Creating User’s Engagement}
+
+\section{\label{sec:level1}Range of Capabilities}
+
+\section{\label{sec:level1}Data Analytics}
+
 
 Chatbots work most likely humans handle technical support. The chatbot is the medium responding when a customer starts a conversation looking for support. For example, if a trader requests the price of Litecoin, using the information available, the chatbot would immediately respond in the same way as a human would: “George, you recently asked me about Litecoin. Would you like to trade Litecoin, Bitcoin, Ether and 100+ more cryptocurrencies on our new multi-asset trading platform? Click here to find out more”.
 
@@ -139,7 +143,7 @@ Chatbots could also be connected to a trading platform where the chatbot analyze
  
 With the past of the time the chatbot can become smarter by learning from the user’s deposit history, open positions and margin requirements so it can make calls-to-action more targeted: \textit{“Your equity is \$1040.34. Should EUR/USD drop more than 100 pips, your position “\#123 Buy 1 lot EUR/USD @ 1.12345” will be liquidated. Would you like to top up your account to avoid this? The suggested amount is \$450”}.
 
-\section{\label{sec:level1}Trade and Transactions via Chat}
+\section{\label{sec:level1}Transactions through chatbots}
 
 Currently the push notifications are the way to do outbound marketing.
 Brands can schedule promotions and launch them without customization as long day Users are full of notifications out of context.
@@ -149,6 +153,8 @@ The chatbots respond to the micromomentos of the people and their level of under
 
 
 All without having to leave your messaging platform. It will not be necessary that he resorts to the app to buy his tickets or to the web site to consult the prices of souvenirs, or open the browser to trace your route.
+
+\section{\label{sec:level1}Transactions through chatbots}
 
 \section{\label{sec:level1}Functionality}
 
