Adding introduction changes

--- a/References.bib
+++ b/References.bib
@@ -20,7 +20,38 @@ eprint = {
 
 }
 
-@InProceedings{Saliimi_SQLBasedChatbot2011,
+@article{weizenbaum1966eliza_1529899792,
+  title={ELIZA—a computer program for the study of natural language communication between man and machine},
+  author={Weizenbaum, Joseph},
+  journal={Communications of the ACM},
+  volume={9},
+  number={1},
+  pages={36--45},
+  year={1966},
+  publisher={ACM}
+}
+
+@article{marshall2018nescient_215264968,
+  title={A Nescient Investment},
+  author={Marshall, Jeffrey},
+  journal={The Texas Orator Blog Entries},
+  year={2018}
+}
+
+@article{ranoliya2017chatbot_08126057,
+  title={Chatbot for University Related FAQs},
+  author={Ranoliya, Bhavika R and Raghuwanshi, Nidhi and Singh, Sanjay},
+  year={2017}
+}
+
+@article{wallace2008alice_sn,
+  title={ALICE: Artificial Intelligence Foundation Inc},
+  author={Wallace, Richard S},
+  journal={Received from: http://www. alicebot. org},
+  year={2008}
+}
+
+@InProceedings{SaliimiSQLBasedChatbot2011_220868591,
 author="Saliimi Lokman, Abbas
 and Mohamad Zain, Jasni",
 editor="Zain, Jasni Mohamad
@@ -36,7 +67,7 @@ abstract="Artificial intelligence chatbot is a technology that makes interaction
 isbn="978-3-642-22191-0"
 }
 
-@inproceedings{Lokman_DesigningDiabetic2009,
+@inproceedings{LokmanDesigningDiabetic2009_266872926,
   title={Designing a Chatbot for diabetic patients},
   author={Lokman, Abbas Saliimi and Zain, Jasni Mohamad and Komputer, Fakulti Sistem and Perisian, Kejuruteraan},
   booktitle={International Conference on Software Engineering \& Computer Systems (ICSECS'09)},
@@ -44,14 +75,50 @@ isbn="978-3-642-22191-0"
   year={2009}
 }
 
+@inproceedings{io2017chatbots_08289883,
+  title={Chatbots and conversational agents: A bibliometric analysis},
+  author={Io, HN and Lee, CB},
+  booktitle={Industrial Engineering and Engineering Management (IEEM), 2017 IEEE International Conference on},
+  pages={215--219},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{leonhardt2007using_04281173,
+  title={Using chatbots for network management training through problem-based oriented education},
+  author={Leonhardt, Michelle Denise and Tarouco, Liane and Vicari, Rosa Maria and Santos, Elder Rizzon and da Silva, Michele dos Santos},
+  booktitle={Advanced Learning Technologies, 2007. ICALT 2007. Seventh IEEE International Conference on},
+  pages={845--847},
+  year={2007},
+  organization={IEEE}
+}
+
+@inproceedings{rahman2017programming_08288910,
+  title={Programming challenges of chatbot: Current and future prospective},
+  author={Rahman, AM and Al Mamun, Abdullah and Islam, Alma},
+  booktitle={Humanitarian Technology Conference (R10-HTC), 2017 IEEE Region 10},
+  pages={75--78},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{futrelle2009nlp_05332110,
+  title={NLP-NG—A new NLP system for biomedical text analysis},
+  author={Futrelle, Robert P and Satterley, Jeff and McCormack, Tim},
+  booktitle={Bioinformatics and Biomedicine Workshop, 2009. BIBMW 2009. IEEE International Conference on},
+  pages={296--301},
+  year={2009},
+  organization={IEEE}
+}
+
 @misc{Newswire_MarketAssessment2017,
 year={2017},
 month={Jan 05},
-title={Chatbots and Artificial Intelligence: Market Assessment, Application Analysis, and Forecasts, 2022: Consumer Chatbot Applications will Continue to Lead the Market Through 2022 with $744M in Revenue - Research and Markets},
+title={Chatbots and Artificial Intelligence: Market Assessment, Application Analysis, and Forecasts, 2022: Consumer Chatbot Applications will Continue to Lead the Market Through 2022 with \$744M in Revenue - Research and Markets},
 journal={PR Newswire},
-note={Copyright - Copyright PR Newswire Association LLC Jan 5, 2017; Última actualización - 2017-01-05},
-abstract={Global and regional forecasts by industry, application, and business model Analysis of Chatbot market across industry verticals with use cases in diverse sectors Analysis of Chatbot companies including their strategic initiatives, solutions, applications, and services Assessment of current Chatbot developments and role of Machine Learning and AI other technologies Analysis of Chatbot architecture, feature/functionality, and how it will impact enterprise and business in general Assessment of emerging Chatbot business models and associated economic impact on labor, investments, and ROI Select Findings: Chatbots are moving aggressively beyond CRM in leading industry verticals Stand-alone Chatbots are expected to contribute 40% of the market by 2022 Lost jobs due to Chatbots and other AI represent lost wages of $262.7B annually by 2021 Consumer Chatbot applications will continue to lead the market through 2022 with $744M in revenue Key Topics Covered: 1 Introduction 2 Intelligent Chatbots Ecosystem Analysis 3 Chatbot Market: SWOT Analysis and Use Cases 4 Chatbots Market Analysis and Forecasts 5 Chatbot Company and Solution Analysis 6 Conclusions and Recommendations Companies Mentioned 24me Amazon Apple Inc. Artificial Solutions Ltd. Aspect Software, Inc. Conversica Creative Virtual Ltd. Cubic Facebook Inc. Foursquare Google Haptik, Inc. Hound HP IBM Watson Indigo Intel Corporation Kik Mattel Microsoft Corporation motion.ai Robin Saleforce SAP SIRIUS SK Telecom Co, Ltd. Skype Slack Speaktoit Inc. TacoBell Uber Vokul WeChat WhatsApp Yahoo Inc. For more information about this report visit http://www.researchandmarkets.com/research/5m8jnl/chatbots_and Media Contact: Research and Markets Laura Wood, Senior Manager press@researchandmarkets.com For E.S.T Office Hours Call +1-917-300-0470 For U.S./CAN Toll Free Call +1-800-526-8630 For GMT Office Hours Call +353-1-416-8900 U.S. Fax: 646-607-1907 Fax (outside U.S.): +353-1-481-1716 To view the original version on PR Newswire, visit:http://www.prnewswire.com/news-releases/chatbots-and-artificial-intelligence-market-assessment-application-analysis-and-forecasts-2022-consumer-chatbot-applications-will-continue-to-lead-the-market-through-2022-with-744m-in-revenue---research-and-markets-300386384.html SOURCE Research and Markets Credit: Research and Markets},
+note={Copyright - Copyright PR Newswire Association LLC Jan 5, 2017; Last Update - 2017-01-05},
+abstract={Global and regional forecasts by industry, application, and business model Analysis of Chatbot market across industry verticals with use cases in diverse sectors Analysis of Chatbot companies including their strategic initiatives, solutions, applications, and services Assessment of current Chatbot developments and role of Machine Learning and AI other technologies Analysis of Chatbot architecture, feature/functionality, and how it will impact enterprise and business in general Assessment of emerging Chatbot business models and associated economic impact on labor, investments, and ROI Select Findings: Chatbots are moving aggressively beyond CRM in leading industry verticals Stand-alone Chatbots are expected to contribute 40% of the market by 2022 Lost jobs due to Chatbots and other AI represent lost wages of $262.7B annually by 2021 Consumer Chatbot applications will continue to lead the market through 2022 with $744M in revenue Key Topics Covered: 1 Introduction 2 Intelligent Chatbots Ecosystem Analysis 3 Chatbot Market: SWOT Analysis and Use Cases 4 Chatbots Market Analysis and Forecasts 5 Chatbot Company and Solution Analysis 6 Conclusions and Recommendations Companies Mentioned 24me Amazon Apple Inc. Artificial Solutions Ltd. Aspect Software, Inc. Conversica Creative Virtual Ltd. Cubic Facebook Inc. Foursquare Google Haptik, Inc. Hound HP IBM Watson Indigo Intel Corporation Kik Mattel Microsoft Corporation motion.ai Robin Saleforce SAP SIRIUS SK Telecom Co, Ltd. Skype Slack Speaktoit Inc. TacoBell Uber Vokul WeChat WhatsApp Yahoo Inc. For more information about this report visit http://www.researchandmarkets.com/research/5m8jnl/chatbots_and Media Contact: Research and Markets Laura Wood, Senior Manager press\@researchandmarkets.com For E.S.T Office Hours Call +1-917-300-0470 For U.S./CAN Toll Free Call +1-800-526-8630 For GMT Office Hours Call +353-1-416-8900 U.S. Fax: 646-607-1907 Fax (outside U.S.): +353-1-481-1716 To view the original version on PR Newswire, visit:http://www.prnewswire.com/news-releases/chatbots-and-artificial-intelligence-market-assessment-application-analysis-and-forecasts-2022-consumer-chatbot-applications-will-continue-to-lead-the-market-through-2022-with-744m-in-revenue---research-and-markets-300386384.html SOURCE Research and Markets Credit: Research and Markets},
 keywords={Business And Economics; SURVEYS, POLLS & RESEARCH; Automation; Artificial intelligence; Customer relationship management},
 language={English},
-url={http://wdg.biblio.udg.mx:2048/login?url=https://search.proquest.com/docview/1855327260?accountid=28915},
+url={https://search.proquest.com/docview/1855327260?accountid=28915},
 }
