--- a/main.tex
+++ b/main.tex
@@ -38,7 +38,7 @@
 
 
 
-%%% Headers and footers
+%%%% Headers and footers
 \usepackage{fancyhdr}												% Needed to define custom headers/footers
 	\pagestyle{fancy}														% Enabling the custom headers/footers
 \usepackage{lastpage}	
@@ -123,59 +123,63 @@ In this paper a design for a cryptocurrency chatbot based on emotions is provide
 % The first character should be within \initial{}
 
 \section{\label{sec:level1}Introduction}
-
-Chatbots are the result of an evolution of more than 30 years. The first conversational bot was Eliza, invented in the 1960s by the German Joseph Wiezenbaum in the laboratory of Artificial Intelligence from the Massachusetts Institute of Technology (MIT), in U.S. In the 1990s, companies implemented telephone IVRs, systems of interactive voice response. Today, users demand 24/7 attention, immediate, digestible and useful. For the companies this requirement has become an opportunity to improve their customer services models and experience strategies. 
-
-
-Chatbots are positioned as main players of innovation. Using chatbots has become an option that more and more companies are using to provide an additional service to their customers. In the past few months, a hype about this topic has been developed and according to Credence Research, chatbots are going to be a key piece of automation for 2019 and Gartner estimates that more than 85\% of the service centers client, will be operated by bots in 2020.
-
-\section{\label{sec:level1}Range of Capabilities}
-
-\section{\label{sec:level1}Data Analytics}
+Now at days, numerous different web-based services such as e-commerce, e-business, e- learning, etc. are looking for different channels to aid their users. The way companies manage this virtual assistance and their relationship with customers, or as it could be called Customer Relationship Management (CRM), is usually among chat or phone support services. The more increases the demand, more increases the amount of client that must wait for help.  Therefore, a poor client satisfaction is inevitable\cite{ranoliya2017chatbot_08126057}.
 
 
-Chatbots work most likely humans handle technical support. The chatbot is the medium responding when a customer starts a conversation looking for support. For example, if a trader requests the price of Litecoin, using the information available, the chatbot would immediately respond in the same way as a human would: “George, you recently asked me about Litecoin. Would you like to trade Litecoin, Bitcoin, Ether and 100+ more cryptocurrencies on our new multi-asset trading platform? Click here to find out more”.
+One of the aims of Computer Human Interaction(CHI)is to connect with users through instinctive and innate interaction approaches. Natural Language Processing (NLP) has been a wide applied method for this purpose; the user communicates to the computer what is perceived as natural human language and the system is not only able to infer what the user is trying to communicate but also to responds in the same way. \cite{weizenbaum1966eliza_1529899792}\cite{futrelle2009nlp_05332110}.
 
 
-A Chatbot can create engagement between business and customers without human interaction. This engagement can be created through small talks: it could be started by sending alerts, for example: “Notify me when a Bitcoin is less than \$7000”; if this event occurs, the chatbot notifies the user adding a call to action “Would you like to trade the Bitcoin now?”. It could broadcast general messages to a wider audience to crate engagement: “Federal Reserve Governor speaks at 3:15pm EST, don’t forget to top up your account!”
+
+As result of the need of companies to provide additional services to their customers and the success of NLP, chatbots are positioned as main players of innovation. A chatbot is a technology that makes interaction between man and machine possible by using natural language” and in the past few months, a hype about this topic has been developed\cite{LokmanDesigningDiabetic2009_266872926}. According to Credence Research, chatbots are going to be a key piece of automation for 2019 and Gartner estimates that more than 85\% of the service centers client, will be operated by bots in 2020 \cite{Newswire_MarketAssessment2017}.
+
+Chatbots are the result of an evolution of more than 30 years. The first conversational bot was Eliza, invented in the 1960s by the German Joseph Wiezenbaum in the laboratory of Artificial Intelligence from the Massachusetts Institute of Technology (MIT), in U.S. It worked by looking for certain keywords; once a keyword or a tag was detected, ELIZA provided the corresponding response. \cite{ io2017chatbots_08289883}
  
-Chatbots could also be connected to a trading platform where the chatbot analyze the trader’s exposure to the market and warn of potential threats, for example, “The U.S. Nonfarm Payrolls are out today at 13:30 GMT, which may cause significant volatility. Would you like to manage your positions now?”
- 
-With the past of the time the chatbot can become smarter by learning from the user’s deposit history, open positions and margin requirements so it can make calls-to-action more targeted: \textit{“Your equity is \$1040.34. Should EUR/USD drop more than 100 pips, your position “\#123 Buy 1 lot EUR/USD @ 1.12345” will be liquidated. Would you like to top up your account to avoid this? The suggested amount is \$450”}.
-
-\section{\label{sec:level1}Transactions through chatbots}
-
-Currently the push notifications are the way to do outbound marketing.
-Brands can schedule promotions and launch them without customization as long day Users are full of notifications out of context.
+In the 1990s, companies started to implemented telephone IVRs, systems of interactive voice response and in this decade, Richard Wallace developed ALICE. It uses Artificial Intelligence Mark-up Language (AIML) records; they are designed to store information for the chatbot similar an XML.\cite{ wallace2008alice_sn}
 
 
-The chatbots respond to the micromomentos of the people and their level of understanding allows you to make predictions of purchase. For example, if a person bought tickets to watch his favorite team's football game, the chatbot can notify you about the following entries and propose the best seats, suggest that you purchase the special edition cap or you may notice how to get to the stadium, mention nearby parking lots and can even buy food and beverages with a special promotion before reaching the event.
 
-
-All without having to leave your messaging platform. It will not be necessary that he resorts to the app to buy his tickets or to the web site to consult the prices of souvenirs, or open the browser to trace your route.
-
-\section{\label{sec:level1}Transactions through chatbots}
-
-\section{\label{sec:level1}Functionality}
-
-Intelligent Wallet ™ works so that the client specifies one or multiple “Intents” that correspond to a single action or a question the user wants to do. A show.coins intent could, for example, display the best coin to trade during the day for the user. Examples, like “What’s the bullish?” or “Give me the bullish.” The platform can then use these examples with machine learning to match users queries to the correct intent.
-
-\includegraphics[scale=0.40]{img/Chatbot.png}\vspace*{1cm}
-
-Instead of browsing a website, you will have a conversation with the bot, mirroring the type of experience you would get when you go into the complete platform.
-
-\section{\label{sec:level1}Crypto Currency Services}
-Through the platform two main services can be provided\: Investment Advice and Information Management. The first one has to do with the delivery of recommendations or personalized advices to our users, which suggest the investment decision making about the cryptocurrency. The second one provides Market Information and Individual Account balances.
-
-
-In order to provide the Investment Advice service Intelligent Wallet ™ requires you to fill some questionnaires  which lead us to determine your experience with finance, cryptocurrencies,situation and financial capabilities , the investment objective with the finality of give you suitable advices according to your investment needs.
-
-\includegraphics[scale=0.65]{img/risks.png}\vspace*{1.5cm}
-
-\section{\label{sec:level1}Conclusion}
-Sophisticated chatbots break new ground in conversion and activation of prospects into sales. Being a diligent conversational partner, this AI remembers the history of the dialog and is continuously self-learning. Thus, a chatbot can connect with a user on a more intimate level, it has the ability to get under a traders’ skin by adding value that improves their day-to-day lives. However, only a chatbot with a well-designed architecture and advanced functionality can enrich a company’s communications. \cite{Barbara_CL2018}
-
-Chatbots still remain an underrated channel these days among brokerages, it is an appropriate time to explore whether your business may need one.
+%\section{\label{sec:level1}Creating User’s Engagement}
+%
+%Chatbots work most likely humans handle technical support. The chatbot is the medium responding when a customer starts a conversation looking for support. For example, if a trader requests the price of Litecoin, using the information available, the chatbot would immediately respond in the same way as a human would: “George, you recently asked me about Litecoin. Would you like to trade Litecoin, Bitcoin, Ether and 100+ more cryptocurrencies on our new multi-asset trading platform? Click here to find out more”.
+%
+%
+%A Chatbot can create engagement between business and customers without human interaction. This engagement can be created through small talks: it could be started by sending alerts, for example: “Notify me when a Bitcoin is less than \$7000”; if this event occurs, the chatbot notifies the user adding a call to action “Would you like to trade the Bitcoin now?”. It could broadcast general messages to a wider audience to crate engagement: “Federal Reserve Governor speaks at 3:15pm EST, don’t forget to top up your account!”
+% 
+%Chatbots could also be connected to a trading platform where the chatbot analyze the trader’s exposure to the market and warn of potential threats, for example, “The U.S. Nonfarm Payrolls are out today at 13:30 GMT, which may cause significant volatility. Would you like to manage your positions now?”
+% 
+%With the past of the time the chatbot can become smarter by learning from the user’s deposit history, open positions and margin requirements so it can make calls-to-action more targeted: \textit{“Your equity is \$1040.34. Should EUR/USD drop more than 100 pips, your position “\#123 Buy 1 lot EUR/USD @ 1.12345” will be liquidated. Would you like to top up your account to avoid this? The suggested amount is \$450”}.
+%
+%\section{\label{sec:level1}Trade and Transactions via Chat}
+%
+%Currently the push notifications are the way to do outbound marketing.
+%Brands can schedule promotions and launch them without customization as long day Users are full of notifications out of context.
+%
+%
+%The chatbots respond to the micromomentos of the people and their level of understanding allows you to make predictions of purchase. For example, if a person bought tickets to watch his favorite team's football game, the chatbot can notify you about the following entries and propose the best seats, suggest that you purchase the special edition cap or you may notice how to get to the stadium, mention nearby parking lots and can even buy food and beverages with a special promotion before reaching the event.
+%
+%
+%All without having to leave your messaging platform. It will not be necessary that he resorts to the app to buy his tickets or to the web site to consult the prices of souvenirs, or open the browser to trace your route.
+%
+%\section{\label{sec:level1}Functionality}
+%
+%Intelligent Wallet ™ works so that the client specifies one or multiple “Intents” that correspond to a single action or a question the user wants to do. A show.coins intent could, for example, display the best coin to trade during the day for the user. Examples, like “What’s the bullish?” or “Give me the bullish.” The platform can then use these examples with machine learning to match users queries to the correct intent.
+%
+%\includegraphics[scale=0.40]{img/Chatbot.png}\vspace*{1cm}
+%
+%Instead of browsing a website, you will have a conversation with the bot, mirroring the type of experience you would get when you go into the complete platform.
+%
+%\section{\label{sec:level1}Crypto Currency Services}
+%Through the platform two main services can be provided\: Investment Advice and Information Management. The first one has to do with the delivery of recommendations or personalized advices to our users, which suggest the investment decision making about the cryptocurrency. The second one provides Market Information and Individual Account balances.
+%
+%
+%In order to provide the Investment Advice service Intelligent Wallet ™ requires you to fill some questionnaires  which lead us to determine your experience with finance, cryptocurrencies,situation and financial capabilities , the investment objective with the finality of give you suitable advices according to your investment needs.
+%
+%\includegraphics[scale=0.65]{img/risks.png}\vspace*{1.5cm}
+%
+%\section{\label{sec:level1}Conclusion}
+%Sophisticated chatbots break new ground in conversion and activation of prospects into sales. Being a diligent conversational partner, this AI remembers the history of the dialog and is continuously self-learning. Thus, a chatbot can connect with a user on a more intimate level, it has the ability to get under a traders’ skin by adding value that improves their day-to-day lives. However, only a chatbot with a well-designed architecture and advanced functionality can enrich a company’s communications. \cite{Barbara_CL2018}
+%
+%Chatbots still remain an underrated channel these days among brokerages, it is an appropriate time to explore whether your business may need one.
 
 \newpage
 \bibliography{References}
